--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ function handleComplete(evt,comp) {
 	exportRoot = new lib.index();
 	stage = new lib.Stage(canvas);
 	stage.enableMouseOver();	
+	console.log('test')
 	//Registers the "tick" event listener.
 	fnStartAnimation = function() {
 		stage.addChild(exportRoot);
